UPDATE: Patched missing background and fixed resizing error at the botton on mobile devices

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -69,3 +69,9 @@ p {
 .clothing__modal-radio-btn:checked + span {
   color: black;
 }
+
+@media(max-width: 705px){
+  .App{
+    height: 100%;
+  }
+}
